# kryalka-Noise-as-Temperature-and-Valley-Hopping-in-the-Loss-Landscape

./: .gitignore  .pre-commit-config.yaml  full_project_dump.txt  pyproject.toml
configs/eval/: barrier.yaml  geometry.yaml  interpolation.yaml
configs/train/: lr_bs_grid.yaml  sgd_base.yaml  sgd_bs64.yaml
experiments/: analyze_interpolation_shapes.py  build_trajectory_pairs.py  collect_barriers_summary.py  detect_transitions.py  run_barrier_grid.sh  run_interpolation_grid.sh  run_lr_bs_grid.sh  validate_local_runs.py  validate_lr_bs_grid.py
src/ntempvh/: cli.py
src/ntempvh/data/: cifar.py
src/ntempvh/eval/: barrier.py  bn.py  geometry.py  interpolation.py
src/ntempvh/train/: trainer.py
tests/: test_barrier.py  test_geometry.py  test_interpolation.py  test_reproducibility.py
