[project]
name = "ntempvh"
version = "0.1.0"
description = "Noise as Temperature and Valley Hopping in the Loss Landscape"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "tqdm",
  "numpy",
  "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ntempvh = "ntempvh.cli:main"